package ch.ffhs.ftoop.doppelgruen.quiz.game;

/** Representations for all the valid locations for the game where the player could be. */
public enum Location {
  LOBBY,
  LOOKING_FOR_GAME,
  INGAME
}
